--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -60,6 +60,12 @@ img {
   text-align: center;
 }
 
+.card p{
+  margin:10px auto;
+  font-size:18px;
+  text-align: center;
+}
+
 .card label{
   font-size:24px;
   margin:10px auto;
