--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,12 +4,13 @@
 <div class="card">
   <div class="card-body mx-auto">
     <h5>URL Shortener</h5>
-    <img src="https://picsum.photos/300" alt="urlLogo">
+    <img src="/img/linkindex.jpg" alt="urlLogo">
     <form action="/links" method="post">
       <div class="form-group">
         <label for="originalLink">請輸入網址</label>
         <input type="text" class="form-control" id="originalLink" name="originalLink"
           placeholder="如：https://www.facebook.com">
+        <small>請記得加上 "http://" 或是 "https://" </small>
       </div>
       <button type="submit" class="btn btn-primary">轉換</button>
     </form>
