--- a/views/result.handlebars
+++ b/views/result.handlebars
@@ -8,5 +8,10 @@
     <h5>成功生成短網址</h5>
     <p>點選下方結果吧！</p>
     <h5><a href={{originalLink}} target="_blank">{{shortURL}}</a></h5>
+    <div class="returnIndex">
+      <a href="/">
+        <button type="submit" class="btn btn-secondary">回首頁</button>
+      </a>
+    </div>
   </div>
 </div>
